--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-streamlit
-llama-index-vector-stores-qdrant 
-llama-index-readers-file 
-llama-index-embeddings-fastembed
+streamlit>=1.35
+llama-index-vector-stores-qdrant>=0.1.0
+llama-index-readers-file>=0.1.0
+llama-index-embeddings-fastembed>=0.1.3,<0.2.0
 pydub
 python-dotenv
 gtts
 llama-index-llms-groq
 audio-recorder-streamlit
 openai-whisper
-
